fix: resolve production signup 403 forbidden